[ARM] az ts : Add UiFormDefinition file support to TemplateSpecs for GA (05/04) (#17869)
* Initial draft for formUiDefinition

* Tested with generated SDK from https://github.com/Azure/sdk-release-request/issues/1469

* TemplateSpecsVersion parameters artifacts and template have been replaced by linked_templates and main_template

* Restored new lined at end of launch.json file

* reverting changes to setup.py until sdk release

* TemplateSpecs regression addressed https://github.com/Azure/azure-cli/issues/17733#issuecomment-822920882

* Customer reported bug fix

* Removed _packing_engine changes

* Re-recorded test cases with template specs

* Reviewer suggestion

* Re-recorded template specs tests live

* Fixed CLI Style

* Merged with dev

* Removed merge conflicts

* Removed merge conflicts

* Restored new line for launch.json

* Restored new lines at end of files

* Bump template specs SDK to latest release

* Tested with new SDK

* Deployments Tests with new SDK

* SDK Bump to 18.0.0

* Tracking Linux requirements

* Merged with dev and added changes from https://github.com/Azure/azure-cli/pull/18142

* Rerecord test_nw_connection_monitor_v2_creation

Co-authored-by: Tarun Sunkaraneni <3432839+TarunSunkaraneni@users.noreply.github.com>
Co-authored-by: Dania Etienne <daetienn@microsoft.com>

--- a/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_create_template_specs.yaml
+++ b/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_create_template_specs.yaml
@@ -13,9 +13,9 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --description --version-description
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: '{"error":{"code":"ResourceNotFound","message":"The Resource ''Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0''
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:02:54 GMT
+      - Wed, 19 May 2021 08:35:40 GMT
       expires:
       - '-1'
       pragma:
@@ -57,9 +57,9 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --description --version-description
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: '{"error":{"code":"ResourceNotFound","message":"The Resource ''Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002''
@@ -73,7 +73,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:02:55 GMT
+      - Wed, 19 May 2021 08:35:40 GMT
       expires:
       - '-1'
       pragma:
@@ -106,27 +106,27 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --description --version-description
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
-        {\r\n    \"createdBy\": \"zhoxing@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-04-16T02:02:58.9626023Z\",\r\n    \"lastModifiedBy\":
-        \"zhoxing@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-04-16T02:02:58.9626023Z\"\r\n  },\r\n  \"properties\": {\r\n    \"description\":
+        {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T08:35:42.0745153Z\",\r\n    \"lastModifiedBy\":
+        \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
+        \"2021-05-19T08:35:42.0745153Z\"\r\n  },\r\n  \"properties\": {\r\n    \"description\":
         \"AzCLI test root template spec\"\r\n  },\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-create-template-spec000002\"\r\n}"
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '788'
+      - '790'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:03:00 GMT
+      - Wed, 19 May 2021 08:35:42 GMT
       expires:
       - '-1'
       pragma:
@@ -138,13 +138,14 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1193'
+      - '1199'
     status:
       code: 201
       message: Created
 - request:
-    body: '{"location": "westus", "tags": {}, "properties": {"artifacts": [], "description":
-      "AzCLI test version of root template spec", "template": {"$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
+    body: '{"location": "westus", "tags": {}, "properties": {"description": "AzCLI
+      test version of root template spec", "linkedTemplates": [], "mainTemplate":
+      {"$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
       "contentVersion": "1.0.0.0", "parameters": {"customer": {"type": "string", "minLength":
       2, "maxLength": 3, "defaultValue": "[resourceGroup().tags[''customer-short'']]",
       "metadata": {"description": "A short unique identifer for the customer owning
@@ -228,24 +229,24 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '6329'
+      - '6339'
       Content-Type:
       - application/json
       ParameterSetName:
       - -g -n -v -l -f --description --version-description
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
-        {\r\n    \"createdBy\": \"zhoxing@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-04-16T02:03:02.6176689Z\",\r\n    \"lastModifiedBy\":
-        \"zhoxing@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-04-16T02:03:02.6176689Z\"\r\n  },\r\n  \"properties\": {\r\n    \"artifacts\":
-        [],\r\n    \"description\": \"AzCLI test version of root template spec\",\r\n
-        \   \"template\": {\r\n      \"$schema\": \"https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#\",\r\n
+        {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T08:35:43.1795204Z\",\r\n    \"lastModifiedBy\":
+        \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
+        \"2021-05-19T08:35:43.1795204Z\"\r\n  },\r\n  \"properties\": {\r\n    \"description\":
+        \"AzCLI test version of root template spec\",\r\n    \"mainTemplate\": {\r\n
+        \     \"$schema\": \"https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#\",\r\n
         \     \"contentVersion\": \"1.0.0.0\",\r\n      \"parameters\": {\r\n        \"customer\":
         {\r\n          \"type\": \"string\",\r\n          \"minLength\": 2,\r\n          \"maxLength\":
         3,\r\n          \"defaultValue\": \"[resourceGroup().tags['customer-short']]\",\r\n
@@ -368,11 +369,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '9760'
+      - '9744'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 16 Apr 2021 02:03:03 GMT
+      - Wed, 19 May 2021 08:35:43 GMT
       expires:
       - '-1'
       pragma:
@@ -384,7 +385,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1191'
+      - '1198'
     status:
       code: 201
       message: Created
@@ -404,9 +405,9 @@ interactions:
       ParameterSetName:
       - --template-spec --yes
       User-Agent:
-      - AZURECLI/2.21.0 azsdk-python-azure-mgmt-resource/16.0.0 Python/3.8.0 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: DELETE
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2019-06-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: ''
@@ -416,7 +417,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Fri, 16 Apr 2021 02:03:05 GMT
+      - Wed, 19 May 2021 08:35:44 GMT
       expires:
       - '-1'
       pragma:
@@ -428,7 +429,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-deletes:
-      - '14995'
+      - '14999'
     status:
       code: 200
       message: OK
