--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -47,7 +47,7 @@
 /src/azure-cli/azure/cli/command_modules/policyinsights/ @cheggert
 /src/azure-cli/azure/cli/command_modules/privatedns/ @jsntcy @kairu-ms @msyyc
 /src/azure-cli/azure/cli/command_modules/profile/ @jiasli @evelyn-ys @fengzhou-msft
-/src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @Juliehzl @evelyn-ys
+/src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @Juliehzl @evelyn-ys @DaeunYim
 /src/azure-cli/azure/cli/command_modules/resource/ @Juliehzl @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @jsntcy @fengzhou-msft
 /src/azure-cli/azure/cli/command_modules/search/ @huangbolun @kairu-ms
