--- a/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_tde.yaml
+++ b/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_tde.yaml
@@ -15,7 +15,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - --parameters --name --workspace-name --resource-group --transparent-data-encryption-name
+      - --status --name --workspace-name --resource-group --transparent-data-encryption-name
       User-Agent:
       - AZURECLI/2.22.1 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: PUT
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 21 May 2021 09:13:09 GMT
+      - Mon, 24 May 2021 10:20:02 GMT
       expires:
       - '-1'
       pragma:
@@ -47,7 +47,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1198'
+      - '1199'
     status:
       code: 200
       message: OK
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 21 May 2021 09:13:11 GMT
+      - Mon, 24 May 2021 10:20:03 GMT
       expires:
       - '-1'
       pragma:
